# consonantcutter

./: CMakeLists.txt  README.txt
.github/workflows/: build-windows.yml
Source/: Main.cpp  Processor.cpp  Processor.h
